cmake_minimum_required(VERSION 3.13)

# Setup Component name based on directory
get_filename_component(COMPONENT_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
STRING(TOLOWER ${COMPONENT_NAME} COMPONENT_NAME)

# Create a component for the front and rear variants of the driveline code

# Front driveline
set(TARGET_NAME ${COMPONENT_NAME}_front.elf)
add_executable(${TARGET_NAME})
target_compile_definitions(${TARGET_NAME} PUBLIC FTR_DRIVELINE_REAR=0 FTR_DRIVELINE_FRONT=1)
set_target_properties(${TARGET_NAME} PROPERTIES
    COMPONENT_NAME ${COMPONENT_NAME}_front
    COMPONENT_DIR  ${CMAKE_CURRENT_LIST_DIR}
    LINKER_SCRIPT  "STM32L432KCUx_FLASH"
    COMMON_LIBS    "CMSIS_L432;PSCHED;QUEUE;PHAL_L432;DAQ;FAULTS;m;BOOTLOADER_COMMON_L432;WHEEL_SPEEDS"
)
COMMON_FIRMWARE_COMPONENT(${TARGET_NAME})

# Rear driveline
set(TARGET_NAME ${COMPONENT_NAME}_rear.elf)
add_executable(${TARGET_NAME})
target_compile_definitions(${TARGET_NAME}  PUBLIC FTR_DRIVELINE_REAR=1 FTR_DRIVELINE_FRONT=0)
set_target_properties(${TARGET_NAME} PROPERTIES
    COMPONENT_NAME ${COMPONENT_NAME}_rear
    COMPONENT_DIR  ${CMAKE_CURRENT_LIST_DIR}
    LINKER_SCRIPT  "STM32L432KCUx_FLASH"
    COMMON_LIBS    "CMSIS_L432;PSCHED;QUEUE;PHAL_L432;DAQ;FAULTS;m;BOOTLOADER_COMMON_L432;WHEEL_SPEEDS"
)
COMMON_FIRMWARE_COMPONENT(${TARGET_NAME})
